[gd_scene load_steps=5 format=3 uid="uid://ql0wddyw3v3"]

[ext_resource type="Script" uid="uid://dfb4x856hp1cd" path="res://main_menu.gd" id="1_pcoso"]
[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_xyjcc"]
[ext_resource type="PackedScene" uid="uid://cpfytprhd24ow" path="res://bg.tscn" id="2_h0mp6"]
[ext_resource type="PackedScene" uid="uid://bq8dpascomfv3" path="res://options_menu.tscn" id="4_43rle"]

[node name="Control" type="Control" node_paths=PackedStringArray("main_menu_container", "options")]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xyjcc")
script = ExtResource("1_pcoso")
main_menu_container = NodePath("MainMenuContainer")
options = NodePath("OptionsMenu")

[node name="Sprite2D" parent="." instance=ExtResource("2_h0mp6")]
scale = Vector2(0.67, 0.67)

[node name="MainMenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -371.0
offset_top = -125.0
offset_right = 371.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Phase Snow Autobattler"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button2" type="Button" parent="MainMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="OptionsMenu" parent="." instance=ExtResource("4_43rle")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MainMenuContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MainMenuContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="back_button_pressed" from="OptionsMenu" to="." method="_on_options_menu_back_button_pressed"]
